# FastAPI_ecommerce

./: alembic.ini  ecommerce.db  main.py  pyproject.toml  requirements.txt
.gigaide/: gigaide.properties
app/: main.py  schemas.py
app/backend/: db.py
app/migrations/: env.py
app/migrations/versions/: 2f0d289cf1f9_add_review_model.py  735c9551faba_add_review_model.py  7ae1829e69e7_initial_migration.py  8a6c549fe460_initial_migration.py  e30c533881e2_create_user_model.py  f51dfe24ab94_add_review_model.py
app/models/: category.py  products.py  reviews.py  user.py
app/routers/: auth.py  category.py  permission.py  products.py  reviews.py
models/: category.py  products.py
